--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -210,14 +210,14 @@
     <string name="setup_location_title">Ustawienia</string>
     <string name="setup_location_subtitle">Where and who’s ignored</string>
     <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_location_subtitle">Album i jego zawartość zostaną ukryte w zależności od ustawionej lokalizacji</string>
     <string name="setup_location_options_albums">Albumy</string>
     <string name="setup_location_options_timeline">Timeline</string>
     <string name="setup_location_options_both">Both</string>
     <string name="setup_location_type_title">Who should be ignored</string>
-    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
+    <string name="setup_location_type_subtitle">Można wybrać pojedynczy album lub utworzyć wzorzec Regex pasujący do wielu albumów</string>
     <string name="setup_location_types_selection">Wybór</string>
-    <string name="setup_location_types_regex">Regex Pattern</string>
+    <string name="setup_location_types_regex">Wzorzec Regex</string>
     <string name="setup_type_selection_title">Wybór</string>
     <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
     <string name="setup_type_selection_add_album">Dodaj album</string>
@@ -228,11 +228,11 @@
     <string name="setup_type_regex_subtitle">Tworzenie wzorca wyboru</string>
     <string name="setup_type_regex_example_title">Przykłady</string>
     <string name="setup_type_regex_example_first_title"></string>
-    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
+    <string name="setup_type_regex_first_subtitle">.*/Muzyka/[^/]+/?$</string>
     <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
-    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Muzyka/.+/[^/]+/?$</string>
     <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
-    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Muzyka/Albumy_[^/]+/?$</string>
     <string name="setup_type_regex_error">Nieprawidłowy wzorzec Regex</string>
     <string name="setup_type_regex_error_second">This wildcard is already in use</string>
     <string name="setup_confirmation_title">Potwierdzenie</string>
@@ -248,13 +248,14 @@
     <string name="auto_hide_searchbar">Ukryj pasek wyszukiwania podczas przewijania</string>
     <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
     <string name="auto_hide_navigationbar">Ukryj pasek nawigacji podczas przewijania</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="auto_hide_navigationbar_summary">Automatyczne ukrywaj pasek nawigacji podczas przewijania</string>
     <string name="navigation">Nawigacja</string>
     <string name="vault_setup_title">Skonfiguruj swój sejf</string>
     <string name="vault_setup_subtitle"><![CDATA[Szyfruj swoje najbardziej prywatne zdjęcia i filmy]]></string>
     <string name="vault_setup_name">Nazwa sejfu</string>
     <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
     <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
     <string name="ignored">Ignorowane</string>
     <string name="location">Miejsce</string>
@@ -263,11 +264,29 @@
     <string name="click_to_copy">Click to copy</string>
     <string name="take_audio_focus_title">Take Audio Focus</string>
     <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
+    <string name="full_brightness_view_title">Pełna jasność podczas oglądania</string>
+    <string name="full_brightness_view_summary">Zwiększ jasność ekranu do maksimum podczas oglądania zdjęć i filmów</string>
     <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
     <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
     <string name="up_to_date">Up-to-date</string>
+    <string name="delete_location">Usuń lokalizację</string>
+    <string name="delete_metadata">Usuń metadane</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s pozycja</item>
         <item quantity="few">%s pozycji</item>
