--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -13,19 +13,19 @@
     <string name="filter_old">Antigo</string>
     <string name="selected_s">Selecionado %s</string>
     <string name="trash">Lixeira</string>
-    <string name="pause_video">Pausar video</string>
-    <string name="play_video">Reproduzir video</string>
+    <string name="pause_video">Pausar vídeo</string>
+    <string name="play_video">Reproduzir vídeo</string>
     <string name="favorites">Favoritos</string>
     <string name="no_media_title">Parece vazio aqui</string>
-    <string name="no_media_cd">Nenhuma Midia encontrada</string>
-    <string name="empty_trash_title">Limpo</string>
-    <string name="empty_trash_cd">Lixeira está vazia</string>
-    <string name="error_title">Algo correu mal :(</string>
+    <string name="no_media_cd">Nenhuma mídia encontrada</string>
+    <string name="empty_trash_title">Completamente Limpo</string>
+    <string name="empty_trash_cd">A Lixeira está vazia</string>
+    <string name="error_title">Algo deu errado :(</string>
     <string name="error_cd">Ocorreu um erro</string>
     <string name="copy_error">Erro ao copiar</string>
     <string name="trash_restore">Restaurar</string>
     <string name="trash_empty">Esvaziar</string>
-    <string name="trash_delete">Deletar</string>
+    <string name="trash_delete">Excluir</string>
     <string name="share">Compartilhar</string>
     <string name="remove_selected">Remover selecionado</string>
     <string name="remove_all">Remover tudo</string>
@@ -37,14 +37,14 @@
     <string name="mb">MB</string>
     <string name="gb">GB</string>
     <string name="metadata">Metadados</string>
-    <string name="select_all">Seleciona tudo</string>
+    <string name="select_all">Selecionar tudo</string>
     <string name="unselect_all">Desmarcar tudo</string>
     <string name="drop_down_cd">Suspenso</string>
     <string name="back_cd">Voltar</string>
     <string name="settings_title">Configurações</string>
     <string name="settings_general">Geral</string>
     <string name="settings_trash_title">Usar lixeira</string>
-    <string name="settings_trash_summary">Armazena mídias apagadas durante 30 dias.\nA exclusão de mídia resultará na perda permanente se desativado.</string>
+    <string name="settings_trash_summary">Armazenar mídia excluída durante 30 dias.\nA exclusão de mídia resultará na perda permanente se desativado.</string>
     <string name="move_album_to_trash">Mover o álbum para a lixeira</string>
     <string name="pinned_albums_title">Álbuns fixados</string>
     <string name="unpin">Desfixar</string>
@@ -55,7 +55,7 @@
     <string name="app_dev">por %s</string>
     <string name="app_dev_name">IacobIonut01</string>
     <string name="donate">Doar</string>
-    <string name="github">Github</string>
+    <string name="github">GitHub</string>
     <string name="donate_button_cd">Botão de Doação</string>
     <string name="github_button_cd">Botão github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
@@ -84,26 +84,26 @@
     <string name="photo">Foto</string>
     <string name="video">Vídeo</string>
     <string name="close">Fechar</string>
-    <string name="manage_media_title">Permitir que a Gallery gerencie sua mídia</string>
-    <string name="manage_media_summary">Essa configuração simplesmente ignora os pop-ups de confirmação adicionais ao fazer várias ações, como marcar como favorito.</string>
+    <string name="manage_media_title">Permita que Gallery gerencie sua mídia</string>
+    <string name="manage_media_summary">Esta configuração simplesmente ignora quaisquer diálogos de confirmação extras ao executar várias ações, como marcar como favorito.</string>
     <string name="skip">Pular</string>
     <string name="allow">Permitir</string>
     <string name="all">Todos</string>
-    <string name="secure_mode_title">Modo seguro</string>
+    <string name="secure_mode_title">Modo Seguro</string>
     <string name="secure_mode_summary">Ocultar a pré-visualização no aplicativo quando você sair dele</string>
-    <string name="rotate_screen_cd">Virar a tela</string>
+    <string name="rotate_screen_cd">Girar Tela</string>
     <string name="size_dp">%1$sdp</string>
-    <string name="change_album_size">Alterar o tamanho do álbum</string>
+    <string name="change_album_size">Alterar o Tamanho da Capa do Álbum</string>
     <string name="reset">Redefinir</string>
     <string name="customization">Personalização</string>
-    <string name="album_card_size_title">Tamanho da capa do álbum</string>
-    <string name="album_card_size_summary">Escolha manualmente o tamanho da capa do álbum</string>
+    <string name="album_card_size_title">Tamanho da Capa do Álbum</string>
+    <string name="album_card_size_summary">Escolher manualmente o tamanho da capa do álbum</string>
     <string name="set_wallpaper">Papel de parede</string>
-    <string name="set_wallpaper_error">Não é possível definir o papel de parede, não há aplicativo disponível!</string>
-    <string name="monthly_timeline_title">Linda do tempo em mês</string>
-    <string name="monthly_timeline_summary">Agrupar a linha do tempo em mês em vez de data (reiniciar o aplicativo)</string>
-    <string name="amoled_mode_title">Usar o modo Amoled</string>
-    <string name="amoled_mode_summary">Contraste mais alto, mais adequado para telas Amoled</string>
+    <string name="set_wallpaper_error">Não foi possível definir o papel de parede, nenhum aplicativo disponível!</string>
+    <string name="monthly_timeline_title">Linda do Tempo Mensal</string>
+    <string name="monthly_timeline_summary">Agrupar a linha do tempo por mês em vez de por data (reinicie o aplicativo)</string>
+    <string name="amoled_mode_title">Usar o Modo Amoled</string>
+    <string name="amoled_mode_summary">Maior contraste, mais adequado para telas Amoled</string>
     <string name="location_chip">Localização: %s</string>
     <string name="media_details">Detalhes</string>
     <string name="album_card_size">Tamanho da capa do álbum</string>
@@ -111,27 +111,27 @@
     <string name="dialog_to_trash">Mover para a lixeira</string>
     <string name="dialog_delete">Exclusão permanente</string>
     <string name="s_items">%1$s itens</string>
-    <string name="trashing_items">Excluindo %1$s itens...</string>
-    <string name="deleting_items">Apagando %1$s itens...</string>
+    <string name="trashing_items">Movendo %1$s itens para a lixeira...</string>
+    <string name="deleting_items">Excluindo %1$s itens...</string>
     <string name="long_press_to_remove">Toque longo para remover</string>
-    <string name="dialog_from_trash">Restauração da lixeira</string>
+    <string name="dialog_from_trash">Restaurando da Lixeira</string>
     <string name="restoring_items">Restaurando %1$s itens..</string>
-    <string name="trash_incompatible_title">Alguns itens não podem ser descartados!</string>
+    <string name="trash_incompatible_title">Alguns itens não podem ser excluídos!</string>
     <string name="trash_incompatible_summary">Em vez disso, esses itens serão excluídos permanentemente.</string>
     <string name="error_toast">Ocorreu um erro!</string>
     <string name="beta">Beta</string>
-    <string name="remove_metadata">Remover metadados</string>
-    <string name="remove_location">Remover localização</string>
+    <string name="remove_metadata">Remover Metadados</string>
+    <string name="remove_location">Remover Localização</string>
     <string name="description">Descrição</string>
     <string name="move_to_another_album">Mover para outro álbum</string>
     <string name="move">Mover</string>
     <string name="some_permissions_are_not_granted">Algumas permissões não foram concedidas!</string>
     <string name="get_started">Começar a usar</string>
-    <string name="welcome">Bem-vindo</string>
+    <string name="welcome">Bem-vindo(a)</string>
     <string name="setup_summary">Para acessar sua mídia, é necessário conceder as seguintes permissões:</string>
     <string name="required">Necessário</string>
     <string name="optional">Opcional</string>
-    <string name="permission_manage_media_title">Gerenciar mídia</string>
+    <string name="permission_manage_media_title">Gerenciar Mídia</string>
     <string name="permission_manage_media_summary">"Automaticamente concede diálogos de confirmação do sistema quando você solicita várias alterações em sua mídia (alternar favoritos, gerenciar lixeira, editar metadados, etc.)"</string>
     <string name="read_media_images">Ler imagens de mídia</string>
     <string name="read_media_images_summary">Permite que o aplicativo mostre suas imagens</string>
@@ -255,19 +255,38 @@
     <string name="vault_setup_name">Nome do Cofre</string>
     <string name="vault_setup_security_error">Por favor, configure uma medida de segurança do telefone antes de configurar o cofre.</string>
     <string name="vault_setup_summary">O cofre será acessado usando as medidas de segurança do seu telefone (senha ou biometria)\n\nA chave de criptografia pode ser acessada dentro do cofre e será usada para restaurar qualquer cofre.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">O cofre \"%1$s\" já existe</string>
     <string name="ignored">Ignorado</string>
     <string name="location">Local</string>
     <string name="update_file_name">Atualizar o nome do arquivo</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
-    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
-    <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
-    <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="support_the_project">Apoie o projeto</string>
+    <string name="click_to_copy">Clique para copiar</string>
+    <string name="take_audio_focus_title">Assumir Foco do Áudio</string>
+    <string name="take_audio_focus_summary">Ativando isso fará com que o áudio assuma o controle ao reproduzir mídia. Qualquer mídia reproduzida em segundo plano será pausada enquanto o vídeo estiver sendo reproduzido. (É necessário reiniciar o aplicativo)</string>
+    <string name="full_brightness_view_title">Brilho Total ao visualizar</string>
+    <string name="full_brightness_view_summary">Aumentar o brilho da tela para o máximo ao visualizar imagens e vídeos</string>
+    <string name="auto_hide_on_video_play">Ocultar UI ao reproduzir vídeo</string>
+    <string name="auto_hide_on_video_play_summary">Oculta a UI após 2 segundos reproduzindo vídeos</string>
+    <string name="up_to_date">Atualizado</string>
+    <string name="delete_location">Excluir Localização</string>
+    <string name="delete_metadata">Excluir Metadados</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s ítem</item>
         <item quantity="other">%s ítens</item>
