--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -177,7 +177,7 @@
     <string name="change_playback_speed_cd">Oynatma hızını değiştir</string>
     <string name="location_new_album">Konum: Dahili Depolama/%1$s</string>
     <string name="permission_manage_files_title">Tüm Dosyaları Yönet</string>
-    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card)"</string>
+    <string name="permission_manage_files_summary">"Uygulamanın daha önce sistem tarafından kısıtlanmış dosya ve albümleri oluşturmasına, değiştirmesine ve silmesine izin verir. (Resimler ve DCIM klasörleri dışındaki albümleri ve SD Karttakileri içerir)"</string>
     <string name="allow_to_manage_files">Tüm Dosyaların Yönetilmesine İzin Ver</string>
     <string name="vault">Kasa</string>
     <string name="tools">Araçlar</string>
@@ -255,19 +255,38 @@
     <string name="vault_setup_name">Kasa Adı</string>
     <string name="vault_setup_security_error">Kasayı kurmadan önce bir telefon güvenlik önlemi belirleyin.</string>
     <string name="vault_setup_summary">Kasa, telefon güvenlik önlemleriniz (şifre veya biyometrik veriler) kullanılarak açılacaktır.\n\nŞifreleme anahtarı kasanın içinde erişilebilir ve herhangi bir kasayı geri yüklemek için kullanılacaktır.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Kasa \"%1$s\" zaten mevcut</string>
     <string name="ignored">Yok sayıldı</string>
     <string name="location">Konum</string>
     <string name="update_file_name">Dosya adını güncelle</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
-    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
-    <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
-    <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="support_the_project">Projeyi destekle</string>
+    <string name="click_to_copy">Kopyalamak için tıklayın</string>
+    <string name="take_audio_focus_title">Ses Odağını Al</string>
+    <string name="take_audio_focus_summary">Bunu etkinleştirmek, medya oynatılırken ses odağını alacaktır. Arka planda oynatılan herhangi bir medya, video oynatılırken duraklatılacaktır. (Uygulamayı yeniden başlatmak gerekir)</string>
+    <string name="full_brightness_view_title">Görüntüleme sırasında tam parlaklık</string>
+    <string name="full_brightness_view_summary">Görüntüleri ve videoları izlerken ekran parlaklığını maksimuma çıkar</string>
+    <string name="auto_hide_on_video_play">Video Oynatmada Kullanıcı Arayüzünü Gizle</string>
+    <string name="auto_hide_on_video_play_summary">Video oynatırken 2 saniye sonra kullanıcı arayüzünü gizler</string>
+    <string name="up_to_date">Güncel</string>
+    <string name="delete_location">Konumu Sil</string>
+    <string name="delete_metadata">Meta verisini sil</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s öğe</item>
         <item quantity="other">%s öğe</item>
