--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Gallery</string>
     <string name="nav_albums">Album</string>
-    <string name="searchbar_title"><![CDATA[Tìm ảnh & video]]></string>
+    <string name="searchbar_title"><![CDATA[Tìm kiếm ảnh và video]]></string>
     <string name="header_today">Hôm nay</string>
     <string name="header_yesterday">Hôm qua</string>
     <string name="request_permissions">Yêu cầu quyền</string>
@@ -177,44 +177,44 @@
     <string name="change_playback_speed_cd">Thay đổi tốc độ phát lại</string>
     <string name="location_new_album">Vị trí: Bộ nhớ trong/%1$s</string>
     <string name="permission_manage_files_title">Quản lý tất cả các tập tin</string>
-    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card)"</string>
+    <string name="permission_manage_files_summary">"Cho phép ứng dụng tạo, sửa đổi và xóa các tệp và album trước đây bị hệ thống hạn chế. (Bao gồm các album bên ngoài thư mục Pictures và DCIM và các album từ Thẻ SD)"</string>
     <string name="allow_to_manage_files">Cho phép quản lý tất cả các tệp tin</string>
-    <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
-    <string name="library">Library</string>
-    <string name="biometric_authentication">Biometric Authentication</string>
-    <string name="unlock_your_vault">Unlock your Vault</string>
-    <string name="add_media_to_vault_cd">Add Media to Vault</string>
-    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
-    <string name="granted">Granted</string>
-    <string name="new_vault">New Vault</string>
-    <string name="delete_vault">Delete Vault</string>
-    <string name="unknown_vault">Unknown Vault</string>
-    <string name="hide">Hide</string>
+    <string name="vault">Kho</string>
+    <string name="tools">Công cụ</string>
+    <string name="library">Thư viện</string>
+    <string name="biometric_authentication">Xác thực sinh trắc học</string>
+    <string name="unlock_your_vault">Mở Kho của bạn</string>
+    <string name="add_media_to_vault_cd">Thêm phương tiện vào Kho</string>
+    <string name="vault_exists">Kho %1$s (%2$s) tồn tại</string>
+    <string name="granted">Đã cấp quyền</string>
+    <string name="new_vault">Kho mới</string>
+    <string name="delete_vault">Dẹp kho</string>
+    <string name="unknown_vault">Kho lạ</string>
+    <string name="hide">Giấu</string>
     <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
-    <string name="no_ignored_albums">No ignored albums</string>
-    <string name="setup_ignored_albums">Setup ignored albums</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
+    <string name="no_ignored_albums">Chưa bỏ qua album nào</string>
+    <string name="setup_ignored_albums">Thêm vào album bị bỏ qua</string>
+    <string name="individual_album_selection">Lựa chọn Album riêng lẻ</string>
+    <string name="wildcard_creator">Trình tạo ký tự đại diện</string>
     <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
     <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
-    <string name="matched_albums">"Matched albums: %1$s"</string>
-    <string name="go_back">Go back</string>
-    <string name="continue_string">Continue</string>
-    <string name="apply">Apply</string>
+    <string name="matched_albums">"Album phù hợp: %1$s"</string>
+    <string name="go_back">Quay đầu</string>
+    <string name="continue_string">Tiếp tục</string>
+    <string name="apply">Áp dụng</string>
     <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
-    <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
-    <string name="setup_label_title">Ignored Albums</string>
-    <string name="setup_lavel_subtitle">Create</string>
-    <string name="setup_location_title">Options</string>
-    <string name="setup_location_subtitle">Where and who’s ignored</string>
-    <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_label_input">Nhãn</string>
+    <string name="setup_label_placeholder">Đặt nhãn của bạn</string>
+    <string name="setup_label_title">Album đã bỏ qua</string>
+    <string name="setup_lavel_subtitle">Tạo</string>
+    <string name="setup_location_title">Tùy chọn</string>
+    <string name="setup_location_subtitle">Chỗ nào và ai đã bỏ qua</string>
+    <string name="setup_location_location_title">Chỗ nào nên bỏ qua</string>
+    <string name="setup_location_location_subtitle">Album và nội dung của nó sẽ bị giấu tùy thuộc vào vị trí được đặt</string>
     <string name="setup_location_options_albums">Albums</string>
-    <string name="setup_location_options_timeline">Timeline</string>
-    <string name="setup_location_options_both">Both</string>
-    <string name="setup_location_type_title">Who should be ignored</string>
+    <string name="setup_location_options_timeline">Dòng thời gian</string>
+    <string name="setup_location_options_both">Cả hai</string>
+    <string name="setup_location_type_title">Ai nên bị bỏ qua</string>
     <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
     <string name="setup_location_types_selection">Selection</string>
     <string name="setup_location_types_regex">Regex Pattern</string>
@@ -247,14 +247,15 @@
     <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
     <string name="auto_hide_searchbar">Hide search bar on scroll</string>
     <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
-    <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
+    <string name="auto_hide_navigationbar">Giấu thanh điều hướng khi cuộn</string>
+    <string name="auto_hide_navigationbar_summary">Tự động giấu thanh điều hướng khi cuộn</string>
+    <string name="navigation">Điều hướng</string>
+    <string name="vault_setup_title">Thiết lập kho của bạn</string>
+    <string name="vault_setup_subtitle"><![CDATA[Mã hóa những bức ảnh và video riêng tư nhất của bạn]]></string>
     <string name="vault_setup_name">Vault Name</string>
     <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
     <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
     <string name="ignored">Ignored</string>
     <string name="location">Location</string>
@@ -268,6 +269,24 @@
     <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
     <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
     <string name="up_to_date">Up-to-date</string>
+    <string name="delete_location">Delete Location</string>
+    <string name="delete_metadata">Delete Metadata</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="other">%s mục</item>
     </plurals>
