--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -255,19 +255,38 @@
     <string name="vault_setup_name">Bezeichnung des Tresors</string>
     <string name="vault_setup_security_error">Bitte richten Sie vor dem Einrichten des Tresors eine telefonische Sicherheitsmaßnahme ein.</string>
     <string name="vault_setup_summary">Der Zugriff auf den Tresor erfolgt über die Sicherheitsvorkehrungen Ihres Telefons (Passwort oder biometrische Daten)\n\nDer Verschlüsselungsschlüssel kann im Tresor eingesehen werden und wird zur Wiederherstellung des Tresors verwendet.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Tresor \"%1$s\" existiert bereits</string>
     <string name="ignored">Ignoriert</string>
     <string name="location">Standort</string>
     <string name="update_file_name">Dateiname aktualisieren</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
-    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
-    <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
-    <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="support_the_project">Das Projekt unterstützen</string>
+    <string name="click_to_copy">Zum Kopieren anklicken</string>
+    <string name="take_audio_focus_title">Audio-Fokus übernehmen</string>
+    <string name="take_audio_focus_summary">Wenn Sie diese Option aktivieren, wird bei der Wiedergabe von Medien der Audio-Fokus übernommen. Alle Medien, die im Hintergrund abgespielt werden, werden angehalten, während das Video abgespielt wird. (Neustart der App erforderlich)</string>
+    <string name="full_brightness_view_title">Volle Helligkeit beim Betrachten</string>
+    <string name="full_brightness_view_summary">Bildschirmhelligkeit maximieren bei Betrachtung von Bildern und Videos</string>
+    <string name="auto_hide_on_video_play">UI bei Videowiedergabe ausblenden</string>
+    <string name="auto_hide_on_video_play_summary">Blendet die Benutzeroberfläche beim Abspielen von Videos nach 2 Sekunden aus</string>
+    <string name="up_to_date">Aktuell</string>
+    <string name="delete_location">Standort entfernen</string>
+    <string name="delete_metadata">Metadaten löschen</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
