--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -255,6 +255,7 @@
     <string name="vault_setup_name">Vault Name</string>
     <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
     <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
     <string name="ignored">Ignored</string>
     <string name="location">Location</string>
@@ -268,6 +269,24 @@
     <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
     <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
     <string name="up_to_date">Up-to-date</string>
+    <string name="delete_location">Delete Location</string>
+    <string name="delete_metadata">Delete Metadata</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
