--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -177,97 +177,116 @@
     <string name="change_playback_speed_cd">Modifier la vitesse de lecture</string>
     <string name="location_new_album">Destination : stockage interne/%1$s</string>
     <string name="permission_manage_files_title">Gérer tous les fichiers</string>
-    <string name="permission_manage_files_summary">"Allows the app to create, modify, and delete files and albums that were previously restricted by the system. (Includes albums outside Pictures and DCIM folders and the ones from the SD Card)"</string>
+    <string name="permission_manage_files_summary">"Permet à l'application de créer, modifier et supprimer des fichiers et des albums qui étaient auparavant limités par le système. (Inclut les albums en dehors des dossiers Pictures et DCIM et ceux de la carte SD)"</string>
     <string name="allow_to_manage_files">Autoriser la gestion de tous les fichiers</string>
-    <string name="vault">Vault</string>
-    <string name="tools">Tools</string>
-    <string name="library">Library</string>
-    <string name="biometric_authentication">Biometric Authentication</string>
-    <string name="unlock_your_vault">Unlock your Vault</string>
-    <string name="add_media_to_vault_cd">Add Media to Vault</string>
-    <string name="vault_exists">Vault %1$s (%2$s) exists</string>
-    <string name="granted">Granted</string>
-    <string name="new_vault">New Vault</string>
-    <string name="delete_vault">Delete Vault</string>
-    <string name="unknown_vault">Unknown Vault</string>
-    <string name="hide">Hide</string>
-    <string name="ignored_albums_text">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a wildcard pattern to automatically hide any albums that matches it.</string>
-    <string name="no_ignored_albums">No ignored albums</string>
-    <string name="setup_ignored_albums">Setup ignored albums</string>
-    <string name="individual_album_selection">Individual Album Selection</string>
-    <string name="wildcard_creator">Wildcard Creator</string>
-    <string name="wildcard_summary">The wildcard will be used to match album names or their paths.\nThe wildcard can be treated as a regex pattern.</string>
-    <string name="wildcard_summary_first">Wildcard: %1$s\nMatched albums: %2$s</string>
-    <string name="matched_albums">"Matched albums: %1$s"</string>
-    <string name="go_back">Go back</string>
-    <string name="continue_string">Continue</string>
-    <string name="apply">Apply</string>
-    <string name="setup_label_info">Select what albums you would like to not see in the main Timeline, in the Albums tab or both.\n\nYou can either select individual albums or create a Regex Pattern to automatically hide any albums that matches it.</string>
+    <string name="vault">Coffre-fort</string>
+    <string name="tools">Outils</string>
+    <string name="library">Bibliothèque</string>
+    <string name="biometric_authentication">Authentification biométrique</string>
+    <string name="unlock_your_vault">Déverrouiller votre coffre-fort</string>
+    <string name="add_media_to_vault_cd">Ajouter un média au coffre-fort</string>
+    <string name="vault_exists">Le coffre-fort %1$s (%2$s) existe</string>
+    <string name="granted">Autorisé</string>
+    <string name="new_vault">Nouveau coffre-fort</string>
+    <string name="delete_vault">Supprimer le coffre-fort</string>
+    <string name="unknown_vault">Coffre-fort inconnu</string>
+    <string name="hide">Masquer</string>
+    <string name="ignored_albums_text">Sélectionnez les albums que vous ne souhaitez pas voir dans la Timeline principale, dans l\'onglet Albums ou dans les deux.\n\nVous pouvez sélectionner des albums individuels ou créer un motif de caractère générique pour masquer automatiquement tous les albums qui y correspondent.</string>
+    <string name="no_ignored_albums">Aucun album ignoré</string>
+    <string name="setup_ignored_albums">Configurer les albums ignorés</string>
+    <string name="individual_album_selection">Sélection d\'un album individuel</string>
+    <string name="wildcard_creator">Créateur de caractères génériques</string>
+    <string name="wildcard_summary">Le caractère générique sera utilisé pour faire correspondre les noms d\'albums ou leurs chemins d\'accès.\nLe caractère générique peut être traité comme un motif regex.</string>
+    <string name="wildcard_summary_first">Caractère générique : %1$s\nAlbums correspondants : %2$s</string>
+    <string name="matched_albums">"Albums correspondants : %1$s"</string>
+    <string name="go_back">Retour</string>
+    <string name="continue_string">Continuer</string>
+    <string name="apply">Appliquer</string>
+    <string name="setup_label_info">Sélectionnez les albums que vous ne souhaitez pas voir dans la Timeline principale, dans l\'onglet Albums ou dans les deux.\n\nVous pouvez sélectionner des albums individuels ou créer un motif Regex pour masquer automatiquement tous les albums qui y correspondent.</string>
     <string name="setup_label_input">Label</string>
-    <string name="setup_label_placeholder">Set your label</string>
-    <string name="setup_label_title">Ignored Albums</string>
-    <string name="setup_lavel_subtitle">Create</string>
+    <string name="setup_label_placeholder">Définissez votre label</string>
+    <string name="setup_label_title">Albums ignorés</string>
+    <string name="setup_lavel_subtitle">Créer</string>
     <string name="setup_location_title">Options</string>
-    <string name="setup_location_subtitle">Where and who’s ignored</string>
-    <string name="setup_location_location_title">Where should be ignored</string>
-    <string name="setup_location_location_subtitle">The album and it’s content will be hidden depending where the location is set</string>
+    <string name="setup_location_subtitle">Où et qui est ignoré</string>
+    <string name="setup_location_location_title">Où faut-il ignorer</string>
+    <string name="setup_location_location_subtitle">L\'album et son contenu seront masqués en fonction de l\'endroit où l\'emplacement est défini</string>
     <string name="setup_location_options_albums">Albums</string>
     <string name="setup_location_options_timeline">Timeline</string>
-    <string name="setup_location_options_both">Both</string>
-    <string name="setup_location_type_title">Who should be ignored</string>
-    <string name="setup_location_type_subtitle">You can select either a single album or create a Regex pattern to match multiple</string>
-    <string name="setup_location_types_selection">Selection</string>
-    <string name="setup_location_types_regex">Regex Pattern</string>
-    <string name="setup_type_selection_title">Selection</string>
-    <string name="setup_type_selection_subtitle">Select your to-be-ignored album</string>
-    <string name="setup_type_selection_add_album">Add album</string>
-    <string name="setup_type_selection_pick_album">Pick an album</string>
-    <string name="setup_type_regex_label">Regex Pattern</string>
-    <string name="setup_type_regex_summary">Ignore your albums automatically using a regular expression pattern matching.\n\nBefore continuing your pattern must be valid.</string>
-    <string name="setup_type_regex_title">Regex Pattern</string>
-    <string name="setup_type_regex_subtitle">Create a selection pattern</string>
-    <string name="setup_type_regex_example_title">Examples</string>
-    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
-    <string name="setup_type_regex_first_subtitle">.*/Music/[^/]+/?$</string>
-    <string name="setup_type_regex_example_second_title">Match any album under the Music folder and its subfolders:</string>
-    <string name="setup_type_regex_example_second_subtitle">.*/Music/.+/[^/]+/?$</string>
-    <string name="setup_type_regex_example_third_title">Match any album starting with Album_ in the Music folder:</string>
-    <string name="setup_type_regex_example_third_subtitle">.*/Music/Album_[^/]+/?$</string>
-    <string name="setup_type_regex_error">Invalid Regex Pattern</string>
-    <string name="setup_type_regex_error_second">This wildcard is already in use</string>
+    <string name="setup_location_options_both">Les deux</string>
+    <string name="setup_location_type_title">Qui doit être ignoré</string>
+    <string name="setup_location_type_subtitle">Vous pouvez sélectionner un seul album ou créer un motif Regex pour en faire correspondre plusieurs</string>
+    <string name="setup_location_types_selection">Sélection</string>
+    <string name="setup_location_types_regex">Motif Regex</string>
+    <string name="setup_type_selection_title">Sélection</string>
+    <string name="setup_type_selection_subtitle">Sélectionnez l\'album à ignorer</string>
+    <string name="setup_type_selection_add_album">Ajouter un album</string>
+    <string name="setup_type_selection_pick_album">Choisir un album</string>
+    <string name="setup_type_regex_label">Motif Regex</string>
+    <string name="setup_type_regex_summary">Ignorer vos albums automatiquement en utilisant une expression régulière.\n\nAvant de continuer, votre motif doit être valide.</string>
+    <string name="setup_type_regex_title">Motif Regex</string>
+    <string name="setup_type_regex_subtitle">Créer un motif de sélection</string>
+    <string name="setup_type_regex_example_title">Exemples</string>
+    <string name="setup_type_regex_example_first_title">Faire correspondre n\'importe quel album directement sous le dossier Musique :</string>
+    <string name="setup_type_regex_first_subtitle">.*/Musique/[^/]+/?$</string>
+    <string name="setup_type_regex_example_second_title">Faire correspondre n\'importe quel album dans le dossier Musique et ses sous-dossiers :</string>
+    <string name="setup_type_regex_example_second_subtitle">.*/Musique/.+/[^/]+/?$</string>
+    <string name="setup_type_regex_example_third_title">Faire correspondre n\'importe quel album commençant par Album_ dans le dossier Musique :</string>
+    <string name="setup_type_regex_example_third_subtitle">.*/Musique/Album_[^/]+/?$</string>
+    <string name="setup_type_regex_error">Motif Regex invalide</string>
+    <string name="setup_type_regex_error_second">Ce caractère générique est déjà utilisé</string>
     <string name="setup_confirmation_title">Confirmation</string>
-    <string name="setup_confirmation_subtitle">Overview your ignore options and matches</string>
-    <string name="setup_confirmation_where">Where should be ignored</string>
-    <string name="setup_confirmation_who">Who should be ignored</string>
-    <string name="setup_confirmation_matched">Matched Albums</string>
-    <string name="albums_and_timeline">Both Albums and Timeline</string>
-    <string name="created">Created</string>
+    <string name="setup_confirmation_subtitle">Vue générale de vos options ignorées et correspondances</string>
+    <string name="setup_confirmation_where">Où faut-il ignorer</string>
+    <string name="setup_confirmation_who">Qui doit être ignoré</string>
+    <string name="setup_confirmation_matched">Albums correspondants</string>
+    <string name="albums_and_timeline">Albums et Chronologie</string>
+    <string name="created">Créé</string>
     <string name="filter_type_date">Date</string>
-    <string name="filter_type_name">Name</string>
-    <string name="images_videos"><![CDATA[%1$s Images & Videos]]></string>
-    <string name="auto_hide_searchbar">Hide search bar on scroll</string>
-    <string name="auto_hide_searchbar_summary">Automatically hide the search bar or the top bar of the screen while scrolling</string>
-    <string name="auto_hide_navigationbar">Hide navigation bar on scroll</string>
-    <string name="auto_hide_navigationbar_summary">Automatically hide the navigation bar while scrolling</string>
+    <string name="filter_type_name">Nom</string>
+    <string name="images_videos"><![CDATA[%1$s Images & Vidéos]]></string>
+    <string name="auto_hide_searchbar">Masquer la barre de recherche lors du défilement</string>
+    <string name="auto_hide_searchbar_summary">Masquer automatiquement la barre de recherche ou la barre supérieure de l\'écran lors du défilement</string>
+    <string name="auto_hide_navigationbar">Masquer la barre de navigation lors du défilement</string>
+    <string name="auto_hide_navigationbar_summary">Masquer automatiquement la barre de navigation lors du défilement</string>
     <string name="navigation">Navigation</string>
-    <string name="vault_setup_title">Setup your vault</string>
-    <string name="vault_setup_subtitle"><![CDATA[Encrypt your most private photos & videos]]></string>
-    <string name="vault_setup_name">Vault Name</string>
-    <string name="vault_setup_security_error">Please set-up a phone security measure before setting up the vault.</string>
-    <string name="vault_setup_summary">The vault will be accessed using your phone security measures (password or biometrics)\n\nEncryption key can be accessed inside the vault and will be used in order to restore any vaults.</string>
-    <string name="vault_already_exists">Vault \"%1$s\" already exists</string>
-    <string name="ignored">Ignored</string>
-    <string name="location">Location</string>
-    <string name="update_file_name">Update file name</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
-    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
-    <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
-    <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="vault_setup_title">Configurer votre coffre-fort</string>
+    <string name="vault_setup_subtitle"><![CDATA[Chiffrez vos photos & vidéos les plus sensibles]]></string>
+    <string name="vault_setup_name">Nom du coffre-fort</string>
+    <string name="vault_setup_security_error">Veuillez mettre en place une mesure de sécurité téléphonique avant de configurer le coffre-fort.</string>
+    <string name="vault_setup_summary">L\'accès au coffre-fort se fera en utilisant les mesures de sécurité de votre téléphone (mot de passe ou données biométriques)\n\nLa clé de chiffrement est accessible à l\'intérieur du coffre-fort et sera utilisée pour restaurer tout coffre-fort.</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
+    <string name="vault_already_exists">Le coffre-fort \"%1$s\" existe déjà</string>
+    <string name="ignored">Ignoré</string>
+    <string name="location">Emplacement</string>
+    <string name="update_file_name">Mettre à jour le nom du fichier</string>
+    <string name="support_the_project">Soutenir le projet</string>
+    <string name="click_to_copy">Cliquer pour copier</string>
+    <string name="take_audio_focus_title">Prendre l\'accent sur l\'audio</string>
+    <string name="take_audio_focus_summary">L\'activation de cette option permet de prendre la priorité de l\'audio lors de la lecture d\'un média. Tout média en cours de lecture en arrière-plan sera mis en pause pendant la lecture de la vidéo. (Redémarrage de l\'application nécessaire)</string>
+    <string name="full_brightness_view_title">Luminosité maximale lors de la lecture</string>
+    <string name="full_brightness_view_summary">Augmenter la luminosité de l\'écran au maximum lors de la visualisation d\'images et de vidéos</string>
+    <string name="auto_hide_on_video_play">Masquer l\'interface lors de la lecture d\'une vidéo</string>
+    <string name="auto_hide_on_video_play_summary">Masquer l\'interface après 2 secondes lors de la lecture d\'une vidéo</string>
+    <string name="up_to_date">À jour</string>
+    <string name="delete_location">Delete Location</string>
+    <string name="delete_metadata">Delete Metadata</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
