--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -255,19 +255,38 @@
     <string name="vault_setup_name">私密空間名稱</string>
     <string name="vault_setup_security_error">請先設定螢幕鎖定。</string>
     <string name="vault_setup_summary">私密空間使用螢幕鎖定解鎖（密碼或生物辨識）。\n\n可於私密空間中存取加密金鑰，供必要時還原無法存取的私密空間。</string>
+    <string name="vault_setup_summary2">The vault will be accessed using your phone security measures (password or biometrics)\n\nThe vault contents are encrypted using a AES256 encryption algorithm.\nEncryption key can\'t be accessed inside the vault and you will not be able to transfer your vault.</string>
     <string name="vault_already_exists">已存在私密空間「%1$s」</string>
     <string name="ignored">已隱藏</string>
     <string name="location">地點</string>
     <string name="update_file_name">更新檔名</string>
-    <string name="support_the_project">Support the project</string>
-    <string name="click_to_copy">Click to copy</string>
-    <string name="take_audio_focus_title">Take Audio Focus</string>
-    <string name="take_audio_focus_summary">Enabling this will take audio focus when playing media. Any media playing in background will pause while the video is playing. (Restart app required)</string>
-    <string name="full_brightness_view_title">Full Brightness when viewing</string>
-    <string name="full_brightness_view_summary">Increase the screen brightness to maximum when viewing images and videos</string>
-    <string name="auto_hide_on_video_play">Hide UI on Video Play</string>
-    <string name="auto_hide_on_video_play_summary">Hides the UI after 2 seconds when playing videos</string>
-    <string name="up_to_date">Up-to-date</string>
+    <string name="support_the_project">支援該專案</string>
+    <string name="click_to_copy">點選複製</string>
+    <string name="take_audio_focus_title">取得音訊焦點</string>
+    <string name="take_audio_focus_summary">啟用此功能將在播放媒體時取得音訊焦點。 影片播放時，後台播放的任何媒體都會暫停。  （需要重新啟動應用程式）</string>
+    <string name="full_brightness_view_title">觀看時全亮度</string>
+    <string name="full_brightness_view_summary">查看影像和影片時將螢幕亮度調至最大</string>
+    <string name="auto_hide_on_video_play">在影片播放時隱藏 UI</string>
+    <string name="auto_hide_on_video_play_summary">影片播放至 2 秒後隱藏 UI</string>
+    <string name="up_to_date">最新</string>
+    <string name="delete_location">刪除位置資訊</string>
+    <string name="delete_metadata">刪除元數據</string>
+    <string name="categorise_your_media">Categorise your media</string>
+    <string name="disclaimer">Disclaimer</string>
+    <string name="disclaimer_classification">Your media is not uploaded to any server, all classification is done locally on your device by using TensorFlow-Lite with a pre-trained model available in the app\'s assets.</string>
+    <string name="delete_all_categories">Delete all categories</string>
+    <string name="delete_all_categories_summary">This will permanently delete all categories found in your media so far, this action is irreversible. You will have to rescan your media to reclassify them.</string>
+    <string name="ai_category">Smart Features</string>
+    <string name="no_classification">Disable image classification</string>
+    <string name="no_classification_summary">Turning this on will remove any UI regarding image classification or managing it. It will NOT delete your classified images database</string>
+    <string name="classification_unwanted">I don\'t want this</string>
+    <string name="classification_unwanted_summary">I don\'t want this, please remove it.\n(It can be enabled again in the settings)</string>
+    <string name="restore">Restore</string>
+    <string name="encrypted">Encrypted</string>
+    <string name="date_format_settings">Date Format</string>
+    <string name="date_header">Date Formats</string>
+    <string name="date_header_summary">Set your own custom date formats</string>
+    <string name="launch_on_library">Launch on Library</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
